--- a/Ecommerce Website 1/index.html
+++ b/Ecommerce Website 1/index.html
@@ -14,7 +14,7 @@
         
         <div>
             <ul id="navbar">
-                <li><a href="index.html">Home</a></li>
+                <li><a class="active" href="index.html">Home</a></li>
                 <li><a href="shop.html">Shop</a></li>
                 <li><a href="blog.html">Blog</a></li>
                 <li><a href="about.html">About</a></li>
