feat{index.html}: added hero section

--- a/Ecommerce Website 1/index.html
+++ b/Ecommerce Website 1/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!--NabBar-->
     <section id="header">
         <a href="#"><img src="/Assets/logo.png" class="logo" alt="refresh the page"></a>
         
@@ -24,6 +25,14 @@
         </div>
     </section>
 
+    <!--Hero Section-->
+    <section id="hero">
+        <h4>Trade-in-Offer</h4>
+        <h2>Super value deals</h2>
+        <h1>On all Products</h1>
+        <p>Save more with the coupons & up to 70% off!</p>
+        <button>Shop Now</button>
+    </section>
 
     <script src="script.js"></script>
 </body>
