--- a/Ecommerce Website 1/index.html
+++ b/Ecommerce Website 1/index.html
@@ -34,6 +34,40 @@
         <button>Shop Now</button>
     </section>
 
+    <!--Feature Section-->
+    <section id="feature" class="section-p1">
+        <div class="fe-box">
+            <img src="/Assets/features/f1.png" alt="Refresh the page">
+                <h6>Free Shipping</h6>
+        </div>
+        <div class="fe-box">
+            <img src="/Assets/features/f2.png" alt="Refresh the page">
+                <h6>Online Order</h6>
+        </div>
+        <div class="fe-box">
+            <img src="/Assets/features/f3.png" alt="Refresh the page">
+                <h6>Save Money</h6>
+        </div>
+        <div class="fe-box">
+            <img src="/Assets/features/f4.png" alt="Refresh the page">
+                <h6>Promotion</h6>
+        </div>
+        <div class="fe-box">
+            <img src="/Assets/features/f5.png" alt="Refresh the page">
+                <h6>Happy Sell</h6>
+        </div>
+        <div class="fe-box">
+            <img src="/Assets/features/f6.png" alt="Refresh the page">
+                <h6>24/7 Support</h6>
+        </div>
+    </section>
+
+    <!--Feature Product Section-->
+    <section>
+        <div>
+            
+        </div>
+    </section>
     <script src="script.js"></script>
 </body>
 </html>
