feat{index.html}: added feature product section

--- a/Ecommerce Website 1/index.html
+++ b/Ecommerce Website 1/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ecommerce Website</title>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -35,7 +35,7 @@
     </section>
 
     <!--Feature Section-->
-    <section id="feature" class="section-p1">
+    <section id="feature" class="section-p1"> <!--Added section-p1 for padding it is custom build style in css & I can add it in every section It will add some space after every section-->
         <div class="fe-box">
             <img src="/Assets/features/f1.png" alt="Refresh the page">
                 <h6>Free Shipping</h6>
@@ -63,9 +63,137 @@
     </section>
 
     <!--Feature Product Section-->
-    <section>
-        <div>
-            
+    <section id="product" class="section-p1"><!--Added section-p1 for padding it is custom build style in css & I can add it in every section It will add some space after every section-->
+        <h2>Featured Products</h2>
+        <p>Summer Collection New Modern Design</p>
+        <div class="pro-container">
+           <div class="pro">
+            <img src="/Assets/products/f1.jpg" alt="Reload page">
+            <div class="des">
+                <span>adidas</span>
+                <h5>Cartoon Astronaut T-Shirts</h5>
+                <div class="star">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </div>
+                <h4>Pkr 7000</h4>
+            </div>
+            <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
+           </div>
+           <div class="pro">
+            <img src="/Assets/products/f2.jpg" alt="Reload page">
+            <div class="des">
+                <span>adidas</span>
+                <h5>Cartoon Astronaut T-Shirts</h5>
+                <div class="star">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </div>
+                <h4>Pkr 7000</h4>
+            </div>
+            <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
+           </div>
+           <div class="pro">
+            <img src="/Assets/products/f3.jpg" alt="Reload page">
+            <div class="des">
+                <span>adidas</span>
+                <h5>Cartoon Astronaut T-Shirts</h5>
+                <div class="star">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </div>
+                <h4>Pkr 7000</h4>
+            </div>
+            <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
+           </div>
+           <div class="pro">
+            <img src="/Assets/products/f4.jpg" alt="Reload page">
+            <div class="des">
+                <span>adidas</span>
+                <h5>Cartoon Astronaut T-Shirts</h5>
+                <div class="star">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </div>
+                <h4>Pkr 7000</h4>
+            </div>
+            <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
+           </div>
+           <div class="pro">
+            <img src="/Assets/products/f5.jpg" alt="Reload page">
+            <div class="des">
+                <span>adidas</span>
+                <h5>Cartoon Astronaut T-Shirts</h5>
+                <div class="star">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </div>
+                <h4>Pkr 7000</h4>
+            </div>
+            <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
+           </div>
+           <div class="pro">
+            <img src="/Assets/products/f6.jpg" alt="Reload page">
+            <div class="des">
+                <span>adidas</span>
+                <h5>Cartoon Astronaut T-Shirts</h5>
+                <div class="star">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </div>
+                <h4>Pkr 7000</h4>
+            </div>
+            <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
+           </div>   <div class="pro">
+            <img src="/Assets/products/f7.jpg" alt="Reload page">
+            <div class="des">
+                <span>adidas</span>
+                <h5>Cartoon Astronaut T-Shirts</h5>
+                <div class="star">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </div>
+                <h4>Pkr 7000</h4>
+            </div>
+            <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
+           </div>
+           <div class="pro">
+            <img src="/Assets/products/f8.jpg" alt="Reload page">
+            <div class="des">
+                <span>adidas</span>
+                <h5>Cartoon Astronaut T-Shirts</h5>
+                <div class="star">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </div>
+                <h4>Pkr 7000</h4>
+            </div>
+            <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
+           </div>
         </div>
     </section>
     <script src="script.js"></script>
