--- a/Ecommerce Website 1/index.html
+++ b/Ecommerce Website 1/index.html
@@ -196,6 +196,13 @@
            </div>
         </div>
     </section>
+
+    <!--Call to banner Section-->
+    <section id="banner" class="section-m1">
+        <h4>Repair Services</h4>
+        <h2>Up to <span>70% Off</span> - All t-Shirts & Accessories</h2>
+        <button class="normal">Explore More</button>
+    </section>
     <script src="script.js"></script>
 </body>
 </html>
