feat{index.html}: added new arrival section

--- a/Ecommerce Website 1/index.html
+++ b/Ecommerce Website 1/index.html
@@ -132,7 +132,7 @@
             <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
            </div>
            <div class="pro">
-            <img src="/Assets/products/f5.jpg" alt="Reload page">
+            <img src="/Assets/products/n5.jpg" alt="Reload page">
             <div class="des">
                 <span>adidas</span>
                 <h5>Cartoon Astronaut T-Shirts</h5>
@@ -148,7 +148,7 @@
             <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
            </div>
            <div class="pro">
-            <img src="/Assets/products/f6.jpg" alt="Reload page">
+            <img src="/Assets/products/n1.jpg" alt="Reload page">
             <div class="des">
                 <span>adidas</span>
                 <h5>Cartoon Astronaut T-Shirts</h5>
@@ -198,10 +198,145 @@
     </section>
 
     <!--Call to banner Section-->
-    <section id="banner" class="section-m1">
+    <section id="banner" class="section-m1"><!--Added section-m1 for padding it is custom build style in css & I can add it in every section It will add some space after every section-->
         <h4>Repair Services</h4>
         <h2>Up to <span>70% Off</span> - All t-Shirts & Accessories</h2>
         <button class="normal">Explore More</button>
+    </section>
+
+    <!--New Arrivals Product-->
+    <section id="product" class="section-p1"><!--Added section-p1 for padding it is custom build style in css & I can add it in every section It will add some space after every section-->
+        <h2>New Arrivals</h2>
+        <p>Summer Collection New Modern Design</p>
+        <div class="pro-container">
+           <div class="pro">
+            <img src="/Assets/products/n1.jpg" alt="Reload page">
+            <div class="des">
+                <span>adidas</span>
+                <h5>Cartoon Astronaut T-Shirts</h5>
+                <div class="star">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </div>
+                <h4>Pkr 7000</h4>
+            </div>
+            <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
+           </div>
+           <div class="pro">
+            <img src="/Assets/products/n2.jpg" alt="Reload page">
+            <div class="des">
+                <span>adidas</span>
+                <h5>Cartoon Astronaut T-Shirts</h5>
+                <div class="star">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </div>
+                <h4>Pkr 7000</h4>
+            </div>
+            <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
+           </div>
+           <div class="pro">
+            <img src="/Assets/products/n3.jpg" alt="Reload page">
+            <div class="des">
+                <span>adidas</span>
+                <h5>Cartoon Astronaut T-Shirts</h5>
+                <div class="star">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </div>
+                <h4>Pkr 7000</h4>
+            </div>
+            <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
+           </div>
+           <div class="pro">
+            <img src="/Assets/products/n4.jpg" alt="Reload page">
+            <div class="des">
+                <span>adidas</span>
+                <h5>Cartoon Astronaut T-Shirts</h5>
+                <div class="star">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </div>
+                <h4>Pkr 7000</h4>
+            </div>
+            <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
+           </div>
+           <div class="pro">
+            <img src="/Assets/products/n5.jpg" alt="Reload page">
+            <div class="des">
+                <span>adidas</span>
+                <h5>Cartoon Astronaut T-Shirts</h5>
+                <div class="star">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </div>
+                <h4>Pkr 7000</h4>
+            </div>
+            <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
+           </div>
+           <div class="pro">
+            <img src="/Assets/products/n6.jpg" alt="Reload page">
+            <div class="des">
+                <span>adidas</span>
+                <h5>Cartoon Astronaut T-Shirts</h5>
+                <div class="star">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </div>
+                <h4>Pkr 7000</h4>
+            </div>
+            <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
+           </div>   <div class="pro">
+            <img src="/Assets/products/n7.jpg" alt="Reload page">
+            <div class="des">
+                <span>adidas</span>
+                <h5>Cartoon Astronaut T-Shirts</h5>
+                <div class="star">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </div>
+                <h4>Pkr 7000</h4>
+            </div>
+            <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
+           </div>
+           <div class="pro">
+            <img src="/Assets/products/n8.jpg" alt="Reload page">
+            <div class="des">
+                <span>adidas</span>
+                <h5>Cartoon Astronaut T-Shirts</h5>
+                <div class="star">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </div>
+                <h4>Pkr 7000</h4>
+            </div>
+            <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
+           </div>
+        </div>
     </section>
     <script src="script.js"></script>
 </body>
