feat{image-gallery.html}: added navbar

--- a/HTML_CSS_Basics/image-gallery.html
+++ b/HTML_CSS_Basics/image-gallery.html
@@ -8,12 +8,23 @@
     <title>Image Gallery</title>
 </head>
 <body>
+    <div class="navbar">
+        <div class="nav-item">
+        <ul>
+            <li><a href="">Home</a></li>
+            <li><a href="">About</a></li>
+            <li><a href="">Contact us</a></li>
+            <li><a href="">Location</a></li>
+        </ul>
+    </div>
+    </div>
     <section class="gallery">
+        
         <h2><u>Image Gallery</u></h2>
         <div class="pro-container">
         <!-- 1 -->
         <div class="card">
-        <img src="/Tasks/Image gallery assets/1.jpg" alt="reload again">
+        <img src="/Image gallery assets/1.jpg" alt="reload again">
             <div class="desc">
             <h5>Tom Helsinki</h5>
             <p>Software Engineer</p>
@@ -21,7 +32,7 @@
         </div>
 <!-- 2 -->
         <div class="card">
-            <img src="/Tasks/Image gallery assets/2.jpg" alt="reload again">
+            <img src="/Image gallery assets/2.jpg" alt="reload again">
                 <div class="desc">
                 <h5>Hinokiski</h5>
                 <p>Web Designer</p>
@@ -29,7 +40,7 @@
             </div>
 <!-- 3 -->
             <div class="card">
-                <img src="/Tasks/Image gallery assets/3.jpg" alt="reload again">
+                <img src="/Image gallery assets/3.jpg" alt="reload again">
                     <div class="desc">
                     <h5>Grace Hedge</h5>
                     <p>Ui/Ux Lead</p>
@@ -37,7 +48,7 @@
                 </div>
 <!-- 4 -->
                 <div class="card">
-                    <img src="/Tasks/Image gallery assets/4.jpg" alt="reload again">
+                    <img src="/Image gallery assets/4.jpg" alt="reload again">
                         <div class="desc">
                         <h5>Abhishek</h5>
                         <p>Mobile Engineer</p>
@@ -45,7 +56,7 @@
                     </div>
 <!-- 5 -->
                     <div class="card">
-                        <img src="/Tasks/Image gallery assets/5.jpg" alt="reload again">
+                        <img src="/Image gallery assets/5.jpg" alt="reload again">
                             <div class="desc">
                             <h5>Tim David</h5>
                             <p>DevOps</p>
@@ -53,7 +64,7 @@
                         </div>
 <!-- 6 -->
                         <div class="card">
-                            <img src="/Tasks/Image gallery assets/6.jpg" alt="reload again">
+                            <img src="/Image gallery assets/6.jpg" alt="reload again">
                                 <div class="desc">
                                 <h5>Clink Hows</h5>
                                 <p>Test Engineer</p>
@@ -61,7 +72,7 @@
                             </div>
 <!-- 7 -->
                             <div class="card">
-                                <img src="/Tasks/Image gallery assets/7.jpg" alt="reload again">
+                                <img src="/Image gallery assets/7.jpg" alt="reload again">
                                     <div class="desc">
                                     <h5>Tim John</h5>
                                     <p>QA Engineer</p>
@@ -69,7 +80,7 @@
                                 </div>
 <!-- 8 -->
                                 <div class="card">
-                                    <img src="/Tasks/Image gallery assets/8.jpg" alt="reload again">
+                                    <img src="/Image gallery assets/8.jpg" alt="reload again">
                                         <div class="desc">
                                         <h5>Minide</h5>
                                         <p>Quality Testing</p>
