feat{image-gallery.html}: added content of navbar image

--- a/HTML_CSS_Basics/image-gallery.html
+++ b/HTML_CSS_Basics/image-gallery.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div class="navbar">
+        <div class="navbar-img"><img src="/Image gallery assets/Asset 8@4x.png" href="#" alt="reload"></div>
         <div class="nav-item">
         <ul>
             <li><a href="">Home</a></li>
